--- a/src/app.scss
+++ b/src/app.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=MuseoModerno:wght@300;400;500;700&family=Roboto:ital,wght@0,100;0,300;1,300&display=swap');
+
 *{
   margin: 0;
   padding: 0;
