--- a/src/Layout/Header/header.scss
+++ b/src/Layout/Header/header.scss
@@ -116,6 +116,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin-bottom: 30px;
   }
   &__basket{
     display: flex;
