--- a/src/Layout/Footer/footer.scss
+++ b/src/Layout/Footer/footer.scss
@@ -1,4 +1,11 @@
 .footer{
+  &__line1{
+    width: 1200px;
+    height: 1px;
+    opacity: 0.38;
+    background: #A7AED2;
+    margin: 80px 0 40px 0;
+  }
   &__top{
     display: flex;
     justify-content: space-between;
