--- a/src/Layout/Footer/footer.scss
+++ b/src/Layout/Footer/footer.scss
@@ -1,4 +1,9 @@
 .footer{
+  a{
+    text-decoration: none;
+    color: black;
+    font-size: 22px;
+  }
   &__top{
     display: flex;
     justify-content: space-between;
