--- a/src/Components/cart_view_all.scss
+++ b/src/Components/cart_view_all.scss
@@ -1,5 +1,5 @@
 .cart_view_all{
   width: 250px;
   height: 386px;
-  background: url("../img/Show All.png");
+  background: url("../img/show_all.png");
 }
