--- a/src/pages/Product/product.scss
+++ b/src/pages/Product/product.scss
@@ -77,7 +77,7 @@
   font-weight: 600;
   line-height: normal;
 }
-button{
+.product__VBaskec{
   border-radius: 10px;
   border: 1.5px solid #46C578;
   background: #46C578;
@@ -89,8 +89,8 @@ button{
   font-style: normal;
   font-weight: 400;
   line-height: normal;
-  margin-top: 30px;
   cursor: pointer;
+  margin-top: 30px;
 }
 .aboutproduct{
   color: #000;
