add header scroll

--- a/src/Layout/Header/header.scss
+++ b/src/Layout/Header/header.scss
@@ -1,4 +1,8 @@
 .header{
+  width: 100%;
+  position: fixed;
+ top: 0;
+  z-index: 2;
   &__top{
     display: flex;
     justify-content: space-between;
@@ -157,4 +161,8 @@
     }
   }
 
+}
+.header.scrolled{
+  background: #80808090;
+  color: white;
 }
