--- a/src/pages/Register/register.css
+++ b/src/pages/Register/register.css
@@ -122,7 +122,7 @@ button1{
     display: flex;
     width: 380px;
     height: 50px;
-    padding: 14px 0px;
+    padding: 14px 0;
     justify-content: center;
     align-items: center;
     flex-shrink: 0;
