--- a/src/Layout/Header/header.scss
+++ b/src/Layout/Header/header.scss
@@ -3,6 +3,7 @@
   position: fixed;
   top: 0;
   z-index: 2;
+
   &__top{
     display: flex;
     justify-content: space-between;
@@ -100,12 +101,16 @@
     li{
       display: flex;
       align-items: center;
+
       column-gap: 4px;
       color: #303030;
       font-size: 14px;
       font-style: normal;
       font-weight: 500;
       line-height: normal;
+    }
+    li:hover{
+      background: grey;
     }
     li:last-child{
       color: var(--main-color-green, #46C578);
@@ -174,3 +179,27 @@
   background: rgb(255, 255, 255, 0.93);
   color: white;
 }
+.dropdown__content{
+  display: none;
+  position: absolute;
+  right: -20px;
+  top: 40px;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+.dropdown{
+  position: relative;
+  padding-bottom: 40px;
+}
+.dropdown:hover .dropdown__content{
+display: block;
+}
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+.dropdown:hover .dropdown-content {display: block;}
