--- a/src/pages/Basket/basket.scss
+++ b/src/pages/Basket/basket.scss
@@ -54,6 +54,7 @@
   }
   &__kolichestvo{
     display: flex;
+    align-items: center;
     justify-content: space-between;
     width: 127px;
     height: 40px;
