--- a/src/pages/FAQ/faq.scss
+++ b/src/pages/FAQ/faq.scss
@@ -1,7 +1,35 @@
 .faq{
+
+  &__not{
+    display: none;
+  }
+  &__modal{
+    position: fixed;
+    width: 300px;
+    min-height: 300px;
+    background: khaki;
+    top: 60%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    z-index: 100;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    row-gap: 50px;
+    padding: 35px;
+    input{
+      height: 40px;
+      width: 100%;
+    }
+    textarea{
+      padding: 30px 15px 10px;
+
+    }
+  }
   &__box {
     display: flex;
     padding-top: 250px;
+    position: relative;
   }
   &__left{
     h2{
