--- a/src/Layout/Header/header.scss
+++ b/src/Layout/Header/header.scss
@@ -106,7 +106,6 @@
     li{
       display: flex;
       align-items: center;
-
       column-gap: 4px;
       color: #303030;
       font-size: 14px;
@@ -115,7 +114,7 @@
       line-height: normal;
     }
     li:hover{
-      background: #7bc37c;
+      background: #46c578;
       color: white;
     }
   }
@@ -180,17 +179,24 @@
   color: white;
 }
 .dropdown__content{
-  width: 240px;
-  height: 120px;
-  row-gap: 10px;
+  width: 250px;
+  height: 150px;
+  row-gap: 30px;
   margin-top: -20px;
   display: none;
   position: absolute;
   top: 40px;
-  background-color: #f9f9f9;
+  background-color: #46c578;
   min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.6);
   z-index: 1;
+  p{
+    margin-top: 10px;
+    margin-left: 5px;
+    font-size: 20px;
+    color: white;
+  }
+
 }
 .dropdown{
   height: 20px;
@@ -199,14 +205,13 @@
 .dropdown:hover .dropdown__content{
 display: block;
 }
-.dropdown-content a {
-  color: black;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
+.dropdown__Line{
+  width: 230px;
+  height: 1.5px;
+  background: #74D69A;
+  margin-top: 10px;
+  margin-left: 5px;
 }
-.dropdown-content p{
-  margin-top: 15px;
-}
+
 
 .dropdown:hover .dropdown-content {display: block;}
