--- a/src/pages/Goods/Products/VegetablesAndFruits/VegetablesAndFruits.scss
+++ b/src/pages/Goods/Products/VegetablesAndFruits/VegetablesAndFruits.scss
@@ -1,5 +1,6 @@
 .vegetables{
   margin-top: 250px;
+  text-align: center;
   h1{
     font-size: 50px;
     font-weight: 700;
@@ -7,35 +8,15 @@
     color: #46c578;
   }
   &__stroka{
-    padding-top: 80px;
+    padding-top: 40px;
     display: flex;
     justify-content: space-between;
   }
-  &__cart{
-    width: 250px;
-    height: 350px;
-    background: #22cf5944;
-    text-align: center;
-    border-radius: 12px;
-    h2{
-      font-size: 30px;
-      font-weight: 700;
-      text-align: center;
-      padding-top: 10px;
-    }
-    img{
-      width: 200px;
-      height: 200px;
-      border-radius: 8px;
-      margin-top: 10px;
-    }
-    h3{
-      font-size: 40px;
-      padding-top: 10px;
-      font-weight: 700;
-    }
-    p{
-      font-size: 20px;
-    }
+  &__Line{
+    height: 2px;
+    background: #46c578;
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
   }
 }
