--- a/src/pages/home/action/action.scss
+++ b/src/pages/home/action/action.scss
@@ -1,4 +1,8 @@
 .action{
+  a{
+    list-style: none;
+    text-decoration: none;
+  }
   &__text{
     display: flex;
     justify-content: space-between;
