alibek add product

--- a/src/pages/Goods/Products/VegetablesAndFruits/VegetablesAndFruits.scss
+++ b/src/pages/Goods/Products/VegetablesAndFruits/VegetablesAndFruits.scss
@@ -23,8 +23,8 @@
   row-gap: 40px;
 }
 .cart__goods{
+  padding: 10px 15px;
   width: 270px;
-  height: 400px;
   background: #22cf5944;
   text-align: center;
   border-radius: 12px;
